--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Example</title>
-        <link ref = "stylesheet" href = "styles.css">
+        <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
         <p>This is an example of a simple HTML page with one paragraph.</p>
